@@ -1,6 +1,7 @@
 Revision history for perl distribution Mojolicious-Plugin-Webpack
 
 0.07 Not Released
+ - Add Cache-Control to response headers
  - Fix passing on arguments using the "webpack" command
 
 0.06 2019-01-13T10:52:34+0900
